見た目をredmineっぽく修正

--- a/app/views/svn_authzs/_form_svn_direcroty.html.erb
+++ b/app/views/svn_authzs/_form_svn_direcroty.html.erb
@@ -1,4 +1,5 @@
 <%= error_messages_for 'directory' %>
-<div class="box">
-  <p><%= form.text_field :path, :size => 256, :required => true %></p>
-</div>
+<p>
+<label style="display: block"><%= l(:field_path) %>:</label>
+<%= form.text_field :path, :size => 40, :required => true %>
+</p>
