--- a/app/views/svn_authzs/index.html.erb
+++ b/app/views/svn_authzs/index.html.erb
@@ -3,7 +3,7 @@
 <div class="splitcontentright" style="width: 30%">
     <fieldset>
     <legend><%= l(:label_path_new)%></legend>
-    <% form_for :svn_directory, nil, {:url => '/svn_directories/new/' + @project.identifier} do |form| %>
+    <% form_for :svn_directory, nil, {:url => '/svn_authzs/new/' + @project.identifier} do |form| %>
         <%= render :partial => 'form_svn_direcroty', :locals => {:form => form}%>
         <%= form.submit l(:button_create) %>
     <% end %>
